Update tutorial for checkout revisions

--- a/example/course-resources/fork/level-data/checkout-revision-index.yaml
+++ b/example/course-resources/fork/level-data/checkout-revision-index.yaml
@@ -7,24 +7,22 @@ asset_index:
       但是，看得到摸不著的感覺令人心癢難耐，不是嗎？  
       現在，就讓我們來學習如何把過往的${{t/file-tree}}給取出來放到目前的資料夾中  
 
+    introduce-checkpoint: |+2
+      .md      
+      ### 貼心提醒
+      接下來，我們的練習用資料夾將會在幾個不同的夾版本之間轉換  
+      為了以防操作發生任何萬一，與檔案有關的操作我們提供了上面這樣的「存檔點」  
+
+      經過存檔點的時候，資料夾當下的狀態將會保存，這個教學的進度也是  
+      當陷入絕望的情況不知所措時，您隨時可以讀取過往已經儲存的存檔點，回到當時的狀態
+
     open-gui: |+2
       .md
-      為了能夠驗證我們確實有把不同歷史版本的資料夾還原到現在的資料夾中  
-      首先，請使用${{t/gui}}開啟我們位於`#{{basic}}`的練習用資料夾  
+      如同前一個章節，我們操作的對象是位於`#{{basic}}`的練習用資料夾  
+      因此，請使用${{t/gui}}開啟我們該資料夾  
 
-    open-target-folder: |+2
+    open-target-folder-commented: |+2
       .md
-      使用${{t/gui}}開啟資料夾後，讓我們來學一個小技巧來很快地在檔案管理員中檢視我們的資料夾  
-
-      請如下圖(一)所示進行操作：  
-      
-      ![illustration]({{images/open-folder-in-explorer}})  
-      <div class="img-title">圖(一)</div>  
-
-      請按下位於視窗右上角紅框所圈選的${{st/open-in}}後  
-      在跳出的選單上按下橘框所圈選的${{st/open-in-explorer}}  
-      我們的練習用資料夾就會以檔案管理員開啟  
-
       完成以後，請使用上一章節所學的瀏覽${{t/work-tree}}的技巧  
       比對目前資料夾的內容跟「第 1 號提交」與「第 6 號提交」的內容  
       請回答目前的資料夾內容與哪一個提交一致呢？
@@ -34,33 +32,25 @@ asset_index:
 
       請以數字(1或2)回答
 
-    introduce-checkpoint: |+2
-      .md      
-      接下來，我們的練習用資料夾將會在幾個不同的夾版本之間轉換  
-      因為與檔案有關的操作比較複雜，難免不會發生錯誤  
-      為了以防萬一，與檔案有關的操作我們提供了上面這樣的「存檔點」  
 
-      經過存檔點的時候，資料夾當下的狀態將會保存，這個教學的進度也是  
-      當陷入絕望的情況不知所措時，您隨時可以讀取過往已經儲存的存檔點，回到當時的狀態
 
     instruct-checkout-first: |+2
       .md
-      現在，已經確認了我們目前的資料夾是與「第 6 號提交」一致了  
-      讓我們來嘗試把它切換到不同的版本  
+      使用${{t/gui}}開啟資料夾後，讓我們來嘗試將資料夾切換到一個先前的版本  
 
-      請按照下圖(二)與圖(三)的操作，切換資料夾到第 1 號提交：  
+      請按照下圖(一)與圖(二)的操作，切換資料夾到第 1 號提交：  
 
       ![illustration]({{images/checkout-first-context-menu}})  
-      <div class="img-title">圖(二)</div>  
+      <div class="img-title">圖(一)</div>  
 
       首先，如上圖所示，請將滑鼠指向${{t/graph}}的「第 1 號提交」上  
       按下右鍵後，就會出現如圖所示的選單  
 
-      找到選單上如圖中紅框圈選的選項：「${{st/checkout-commit}}」  
-      按下滑鼠左鍵後，會出現如下圖(三)的對話框
+      找到選單上如圖中紅框圈選的選項：「${{st/checkout-revision}}」  
+      按下滑鼠左鍵後，會出現如下圖(二)的對話框
 
       ![illustration]({{images/checkout-first-confirm}})  
-      <div class="img-title">圖(三)</div>  
+      <div class="img-title">圖(二)</div>  
 
       這個對話框大致上是提示說接下來將會把你的資料夾切換成「第 1 號提交」的版本，請問是否確認  
       請按下如上圖中紅框所圈選的確認按鈕，表示確認進行  
@@ -73,17 +63,27 @@ asset_index:
       現在，我們成功的把練習用資料夾倒回先前保存過的「第 1 號提交」的狀態  
       也就是說，資料夾中的所有檔案都變成當時的樣貌了！  
 
-      聽起來有點不可思議，那麼，我們應該如何實際驗證這件事情呢？  
-      當然就是實際把資料夾打開來看看有甚麼變化嘍  
+      聽起來有點不可思議，讓我們實際把資料夾打開來看看當時的資料夾是甚麼樣貌吧  
+
+      請按照接下來的操作檢視資料夾的檔案內容
+
+    open-target-folder: |+2
+      .md
+      讓我們來學一個小技巧來很快地在檔案管理員中檢視我們的資料夾  
+
+      請如下圖(三)所示進行操作：  
       
-      請按照接下來的操作驗證資料夾的內容變化
+      ![illustration]({{images/open-folder-in-explorer}})  
+      <div class="img-title">圖(三)</div>  
+
+      請按下位於視窗右上角紅框所圈選的${{st/open-in}}後  
+      在跳出的選單上按下橘框所圈選的${{st/open-in-explorer}}  
+      我們的練習用資料夾就會以檔案管理員開啟  
 
     instruct-play-first-sound: |+2
       .md
-      請使用檔案管理員開啟位於`#{{basic}}`的資料夾  
-
-      我們會發現，資料夾中出現了一個名為 **sound** 的音檔  
-      這個檔案在這個章節剛開始的時候還不存在，因為它在這個資料夾歷史變遷的過程中被刪除了  
+      當我們使用檔案管理員開啟位於`#{{basic}}`的資料夾之後  
+      我們會發現，資料夾中有一個名為 **sound** 的音檔  
 
       請播放看看 sound，並選擇你所聽到的聲音為下列何者：  
 
@@ -97,8 +97,10 @@ asset_index:
     suggest-checkout-third: |+2
       .md
       恭喜回答正確！  
-      偷偷地告訴你，sound 的內容在「第 3 號提交」時被改變了  
-      就讓我們再一次把資料夾的內容切換過去，然後聽聽看吧  
+      現在，請先記住你聽到的聲音  
+      偷偷地告訴你，sound 的內容會在「第 3 號提交」時又被改變一次  
+
+      就讓我們試著把資料夾的內容切換過去，然後再觀察一次看看吧  
 
     instruct-checkout-third: |+2
       .md
@@ -118,16 +120,51 @@ asset_index:
 
       請以數字(1234)回答
 
+    illustrate-checkout-revision: |+2
+      .md
+      在聽過兩個版本的 sound 音效之後  
+      我們發現了兩次播放同一個資料夾中的同一個音檔，卻會聽見不同的聲音  
+      這充分證明了我們資料夾中的這個檔案發生了變化！  
+
+      我們剛剛所進行的操作，常用的說法是「${{t/checkout-rev-f}}」  
+      下圖(四)說明了${{t/checkout-rev}}所發生的效果：  
+
+      ![illustration]({{images/illustrate-checkout-revision}})  
+      <div class="img-title">圖(四)</div>  
+
+      上圖的左側是${{t/work-tree}}，也就是我們的資料夾  
+      右側則是 git 用來偷偷存放過往版本的地方，${{t/repo}}  
+
+      當我們執行${{t/checkout-rev}}時  
+      git 就會從${{t/repo}}取出資料夾過往的版本，覆蓋掉當前的資料夾  
+
+      可以看到上圖中，紅色、橘色與藍色的箭頭分別代表${{t/checkout-rev}}到紅色、橘色與藍色的版本  
+      而且，${{t/work-tree}}也同時變換成相對應的顏色，表示成為當時的版本  
+
+    illustrate-browse-history: |+2
+      .md
+      與${{t/checkout-rev}}相對的，則是上一個章節中我們所學習的瀏覽過往版本  
+      我們可以使用下圖(五)來回顧一下  
+
+      ![illustration]({{images/illustrate-browse-file-tree}})  
+      <div class="img-title">圖(五)</div>
+      
+      與圖(四)類似，圖(五)左邊是${{t/work-tree}}，右邊是${{t/repo}}  
+      不一樣的是，我們使用放大鏡來代表瀏覽的動作  
+      放大鏡觀察紅色、橘色、或藍色的圓點表示我們瀏覽過往不同版本的資料夾內容  
+      可以發現，無論放大鏡觀察任何版本，左手邊的${{t/work-tree}}永遠保持白色的狀態  
+      這代表瀏覽過往的版本不會影響當前資料夾一分一毫  
+      
     suggest-checkout-sixth: |+2
       .md
-      在聽過兩個版本的 sound 之後，相信你已經體驗到切換資料夾版本的用處了  
+      現在，我們已經充分了解${{t/checkout-rev}}與瀏覽過往版本的差別的  
       那麼，最後就讓我們再切換回這個章節的起點，「第 6 號提交」吧  
       完成後，請按下下面的「執行」按鈕，進行檢查
 
     conclude-section: |+2
       .md 
       恭喜你完成這個章節的指引  
-      相信你已經非常嫻熟於如何切換資料夾${{t/work-tree}}的不同版本了  
+      相信你已經非常嫻熟於如何切換${{t/work-tree}}的不同版本了  
 
       到這裡你或許會開始好奇，在上一個章節中，我們學習了如何瀏覽過往的${{t/file-tree}}  
       並且學習了可以從${{t/gui}}的${{t/file-tree}}介面中窺探特定檔案在過往版本的內容  
@@ -135,13 +172,11 @@ asset_index:
 
       實際上是有的。主要有兩種目的  
       1. 為了可以閱覽任意類型的檔案。相比之下${{t/file-tree}}能夠閱覽的檔案種類有侷限
-         或許你已經注意到了，像sound這樣的音檔還有大多數非文字組成的檔案，都是不能在${{t/file-tree}}的介面閱覽的  
+         或許你已經注意到了，像sound這樣的音檔還有大多數非文字組成的檔案內容，都是不能在${{t/file-tree}}的介面閱覽的  
       2. 想要從一個檔案的過往特定版本開始修改。${{t/file-tree}}只能閱覽，不能修改  
       
       這個章節中，我們透過播放 sound 檔案體現了第 1. 點的用途  
       而第 2. 點提到的「修改」在目前為止卻完全沒有提及  
       因為我們只學習了如何取用既存的資料夾版本  
-      
-      但是沒有問題！在下一個大章中，我們將學習如何創造新的資料夾版本，開創屬於我們的歷史  
+      在下一個大章中，我們將學習如何創造新的資料夾版本，開創屬於我們的歷史  
       敬請期待！
-
