--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -25,3 +25,5 @@ asset_index:
     open-folder-in-explorer: checkout-revision@fork-open-folder-in-explorer.png
     checkout-first-context-menu: checkout-revision@fork-checkout-first-context-menu.png
     checkout-first-confirm: checkout-revision@fork-checkout-first-confirm.png
+    illustrate-browse-file-tree: checkout-revision@illustrate-browse-file-tree.gif
+    illustrate-checkout-revision: checkout-revision@illustrate-checkout-revision.gif
