--- a/example/course-resources/fork/levels/checkout-revision.yaml
+++ b/example/course-resources/fork/levels/checkout-revision.yaml
@@ -14,20 +14,15 @@
     - !elaborate 
       descriptionId: "level-data/checkout-revision/introduction"
       needConfirm: true
-    - !instruct 
-      descriptionId: "level-data/checkout-revision/open-gui"
-      needConfirm: true
-    - !instruct 
-      descriptionId: "level-data/checkout-revision/open-target-folder"
-    - !verifyInput 
-      answer: "2"
-
     - !checkpoint 
-      checkpointName: "example"
-
+      checkpointName: "ready-for-operation"
     - !elaborate 
       descriptionId: "level-data/checkout-revision/introduce-checkpoint"
       needConfirm: true
+    - !instruct 
+      descriptionId: "level-data/checkout-revision/open-gui"
+      needConfirm: true
+
 
   # instruct how to checkout first commit
     - !instruct 
@@ -43,6 +38,9 @@
 
     - !elaborate 
       descriptionId: "level-data/checkout-revision/intro-check-folder-content"
+    - !instruct 
+      descriptionId: "level-data/checkout-revision/open-target-folder"
+      needConfirm: true
     - !instruct 
       descriptionId: "level-data/checkout-revision/instruct-play-first-sound"
     - !verifyInput 
@@ -67,6 +65,14 @@
       descriptionId: "level-data/checkout-revision/instruct-play-third-sound"
     - !verifyInput 
       answer: "1"
+
+    - !illustrate 
+      descriptionId: "level-data/checkout-revision/illustrate-checkout-revision"
+      needConfirm: true
+
+    - !illustrate 
+      descriptionId: "level-data/checkout-revision/illustrate-browse-history"
+      needConfirm: true
 
   # instruct on how to checkout sixth commit
     - !elaborate 
