--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -2,4 +2,4 @@ asset_index:
   infile:
     open-in: "Open in (以...開啟)"
     open-in-explorer: "Open In File Explorer (以檔案管理員開啟)"
-    checkout-commit: "Checkout Commit...(切換到提交...)"
+    checkout-revision: "Checkout Commit...(切換到提交...)"
