Correct the error that baked repo-store got wiped out between stages

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,9 @@
             "program": "${workspaceFolder}/dev/course-maker",
             "args": [
                 "bake-course",
-                ".\\example\\resources+",
-                "course/main",
+                ".\\example",
+                "/",
+                "fork",
                 ".\\test\\resources\\repo-archive\\"
             ],
         },
