Update course content

--- a/example/course-resources/fork/level-data/browse-history-index.yaml
+++ b/example/course-resources/fork/level-data/browse-history-index.yaml
@@ -31,7 +31,7 @@ asset_index:
     graph-as-folder-history: |+2
       .md
 
-      我們重複強調了${{t/graph}}*圖像地*呈現了資料夾變化的歷史，圖像化是甚麼意思呢？ 請看下面圖(二)  
+      我們重複強調了${{t/graph}}**圖像地**呈現了資料夾變化的歷史，圖像化是甚麼意思呢？ 請看下面圖(二)  
 
       ![illustration]({{images/graph-fork}})
       <div class="img-title">圖(二)</div>  
@@ -158,7 +158,7 @@ asset_index:
       經過前面的練習，我們現在發現${{t/file-tree-gui}}的功能非常有趣
       它可以讓我們隨意地讀取這個資料夾過去任何版本的任何檔案內容  
 
-      但是，這樣隨意翻看*過去*的檔案，會影響到*現在*這個資料夾的內容嗎？  
+      但是，這樣隨意翻看**過去**的檔案，會影響到**現在**這個資料夾的內容嗎？  
       就讓我們實地檢查看看  
 
     check-working-directory: |+2
@@ -188,13 +188,14 @@ asset_index:
     introduce-work-tree: |+2
       .md
 
-      從前面的操作，我們發現了，從${{t/gui}}檢視過往的${{t/file-tree}}並不會修改目前資料夾實際上的內容  
+      從前面的操作，我們發現了，從${{t/gui}}檢視到的過往的「===read me===.txt」是與目前資料夾中的版本不同的  
+      也就是說，閱覽以前的${{t/file-tree}}並不會修改目前資料夾實際上的內容  
 
       「目前資料夾實際上的內容」說起來非常繞口  
-      在使用 git 時，我們常常必須區分想要講述的是「*當前*的資料夾狀態」還是「*以前*的資料夾狀態」  
+      在使用 git 時，我們常常必須區分想要講述的是「**當前**的資料夾狀態」還是「**以前**的資料夾狀態」  
       
-      在前不久，我們叫紹了被 git 保存的任意*以前*資料夾版本內容叫做${{t/file-tree}}  
-      相對於此，*當前*的資料夾內容則叫做**${{t/work-tree-f}}**  
+      在前不久，我們叫紹了被 git 保存的任意**以前**資料夾版本內容叫做${{t/file-tree}}  
+      相對於此，**當前**的資料夾內容則叫做**${{t/work-tree-f}}**  
       或者比較通俗的說法是${{t/work-tree-alt-f}}  
 
       雖然${{t/work-tree-alt}}比較容易貼近一般電腦使用者的用語  
@@ -217,17 +218,24 @@ asset_index:
       因為通常我們只能在一個地方工作，所以左邊只有一個白色資料夾  
       
       然後，git 另外找了一個地方，把我們想要留下作紀念(?)的${{t/file-tree}}都偷偷存了起來  
-      就像上圖的右邊存了三個不同版本的${{t/file-tree}}  
+      就像上圖的右邊有三個不同顏色的資料夾，代表存了三個不同版本的${{t/file-tree}}  
 
       話說回來「一群${{t/file-tree}}」使用起來也很不方便  
-      事實上，這個 git 偷偷保存起來的東西也有一個大家慣用的名字，叫做${{t/local-repo-f}}，或者簡稱${{t/repo-f}}  
+      事實上，這個 git 偷偷保存起來的東西也有一個大家慣用的名字，叫做**${{t/local-repo-f}}，或者簡稱${{t/repo-f}}**  
       所以上面的概念圖就會變成像下圖(十一)一樣：
 
-      ![illustration]({{images/illustrate-working-tree-and-repository}})  
+      ![illustration]({{images/illustrate-checkout-revision}})  
       <div class="img-title">圖(十一)</div>  
 
-      左邊的部分保持不變，而右邊用來表示 git 偷存東西的地方－－**${{t/repo}}**  
-      這時候，我們就發現到，右邊的三個資料夾被替換成這個章節所圍繞著的，${{t/graph}}  
+      與圖(十)類似，圖(五)左邊是${{t/work-tree}}，只是右邊換成了一個一個的圓點代表過往的資料夾版本  
+      所有的圓點串接在一起，就形成了**${{t/repo}}**的**${{t/graph}}**  
+      
+      除此之外，這個圖還連帶說明了瀏覽不同版本${{t/file-tree}}的特性  
+
+      我們使用放大鏡來代表瀏覽的動作  
+      放大鏡觀察紅色、橘色、或藍色的圓點表示我們在${{t/gui}}上瀏覽過往不同版本的${{t/file-tree}}  
+      可以發現，無論放大鏡觀察任何版本，左手邊的${{t/work-tree}}永遠保持白色的狀態  
+      這代表瀏覽過往的版本不會影響當前資料夾一分一毫  
 
     summary: |+2
       .md
