--- a/example/course-resources/fork/levels/browse-history.yaml
+++ b/example/course-resources/fork/levels/browse-history.yaml
@@ -3,6 +3,7 @@
     basic:
       workingPath: basic
       referenceStoreName: basic-operation
+      checkpointStoreName: basic-operation-checkpoints
   steps:
     - !illustrate  
       descriptionId: "level-data/browse-history/introduction"
