Polist intro-open-repository

--- a/example/course-resources/fork/levels/intro-open-repository.yaml
+++ b/example/course-resources/fork/levels/intro-open-repository.yaml
@@ -119,6 +119,8 @@
     - !instruct 
       descriptionId: "level-data/intro-open-repository/open-directory-in-fork"
       needConfirm: true
+    - !instruct 
+      descriptionId: "level-data/intro-open-repository/instruct-verify-open"
     - !verifyInput 
       answer: "6"
 
