--- a/example/course-resources/fork/level-data/intro-open-repository-index.yaml
+++ b/example/course-resources/fork/level-data/intro-open-repository-index.yaml
@@ -77,7 +77,9 @@ asset_index:
 
       然後，貼入上圖兩個紅框圈選位置的其中一個後(任選)，按下「選擇資料夾」，就可以開啟資料夾了  
 
-      成功開啟之後，fork 中應該會出現類似下圖紅框圈選的${{t/graph-f}}
+    instruct-verify-open: |+2
+      .md
+      成功開啟之後，fork 中應該會出現類似下圖紅框圈選的範圍，這個叫作${{t/graph-f}}
 
       ![illustration]({{images/fork-open-basic}})  
 
