Polish checkout-revision

--- a/example/course-resources/fork/level-data/checkout-revision-index.yaml
+++ b/example/course-resources/fork/level-data/checkout-revision-index.yaml
@@ -23,6 +23,8 @@ asset_index:
 
     open-target-folder-commented: |+2
       .md
+      讓我們來學一個小技巧來很快地在檔案管理員中檢視我們的資料夾  
+
       完成以後，請使用上一章節所學的瀏覽${{t/work-tree}}的技巧  
       比對目前資料夾的內容跟「第 1 號提交」與「第 6 號提交」的內容  
       請回答目前的資料夾內容與哪一個提交一致呢？
@@ -53,7 +55,7 @@ asset_index:
       <div class="img-title">圖(二)</div>  
 
       這個對話框大致上是提示說接下來將會把你的資料夾切換成「第 1 號提交」的版本，請問是否確認  
-      請按下如上圖中紅框所圈選的確認按鈕，表示確認進行  
+      請如上圖按下紅框所圈選的確認按鈕，表示確認進行  
 
       完成操作後，目前的資料夾應該就會成功切換到「第 1 號提交」所儲存的版本  
       請按下下面的「執行」按鈕，進行檢查
@@ -67,11 +69,13 @@ asset_index:
 
       請按照接下來的操作檢視資料夾的檔案內容
 
-    open-target-folder: |+2
+    instruct-open-folder-reminder: |+2
       .md
-      讓我們來學一個小技巧來很快地在檔案管理員中檢視我們的資料夾  
+      ### 貼心提醒
 
-      請如下圖(三)所示進行操作：  
+      請回憶上一個章節所教授的從 fork 開啟資料夾的小技巧，開啟位於 `#{{basic}}` 的資料夾  
+
+      如果不太確定該怎麼作，請如下圖(三)所示進行操作：  
       
       ![illustration]({{images/open-folder-in-explorer}})  
       <div class="img-title">圖(三)</div>  
@@ -82,7 +86,7 @@ asset_index:
 
     instruct-play-first-sound: |+2
       .md
-      當我們使用檔案管理員開啟位於`#{{basic}}`的資料夾之後  
+      當我們使用檔案管理員開啟位於 `#{{basic}}` 的資料夾之後  
       我們會發現，資料夾中有一個名為 **sound** 的音檔  
 
       請播放看看 sound，並選擇你所聽到的聲音為下列何者：  
@@ -92,15 +96,15 @@ asset_index:
       3. 天雷
       4. 地火
 
-      請以數字(1234)回答
+      請以數字(1/2/3/4)回答
 
     suggest-checkout-third: |+2
       .md
       恭喜回答正確！  
-      現在，請先記住你聽到的聲音  
-      偷偷地告訴你，sound 的內容會在「第 3 號提交」時又被改變一次  
 
-      就讓我們試著把資料夾的內容切換過去，然後再觀察一次看看吧  
+      現在，請先記住你聽到的聲音  
+      根據小道消息，sound 的內容會在「第 3 號提交」時又被改變一次  
+      就讓我們試著把資料夾的內容切換過去，然後再觀察一次並比較看看吧  
 
     instruct-checkout-third: |+2
       .md
@@ -109,7 +113,7 @@ asset_index:
 
     instruct-play-third-sound: |+2
       .md
-      請再一次開啟位於`#{{basic}}`的資料夾，並且播放 sound 這個音檔  
+      請再一次開啟位於 `#{{basic}}` 的資料夾，並且播放 sound 這個音檔  
 
       請選擇你所聽到的聲音為下列何者：  
 
@@ -118,7 +122,7 @@ asset_index:
       3. 天雷
       4. 地火
 
-      請以數字(1234)回答
+      請以數字(1/2/3/4)回答
 
     illustrate-checkout-revision: |+2
       .md
@@ -144,30 +148,34 @@ asset_index:
     illustrate-browse-history: |+2
       .md
       與${{t/checkout-rev}}相對的，則是上一個章節中我們所學習的瀏覽過往版本  
-      我們可以使用下圖(五)來回顧一下  
+      我們可以再次使用下圖(五)來回顧一下  
 
       ![illustration]({{images/illustrate-browse-file-tree}})  
       <div class="img-title">圖(五)</div>
       
       與圖(四)類似，圖(五)左邊是${{t/work-tree}}，右邊是${{t/repo}}  
       不一樣的是，我們使用放大鏡來代表瀏覽的動作  
-      放大鏡觀察紅色、橘色、或藍色的圓點表示我們瀏覽過往不同版本的資料夾內容  
-      可以發現，無論放大鏡觀察任何版本，左手邊的${{t/work-tree}}永遠保持白色的狀態  
-      這代表瀏覽過往的版本不會影響當前資料夾一分一毫  
+      放大鏡觀察紅色、橘色、或藍色的圓點表示我們瀏覽不同版本的${{t/file-tree}}  
+      
+      還記得上一章節中我們強調了，瀏覽過往版本的${{t/file-tree}}不會對${{t/work-tree}}造成影響  
+      只要把圖(四)和圖(五)互相對照就會發現  
+      圖(四)裡面的${{t/work-tree}}的顏色不斷變化，表是每次操作${{t/work-tree}}的內容都會改變  
+      相反的，圖(五)裡面的${{t/work-tree}}則永遠保持白色，表示不會被改變  
       
     suggest-checkout-sixth: |+2
       .md
       現在，我們已經充分了解${{t/checkout-rev}}與瀏覽過往版本的差別的  
       那麼，最後就讓我們再切換回這個章節的起點，「第 6 號提交」吧  
+
       完成後，請按下下面的「執行」按鈕，進行檢查
 
     conclude-section: |+2
       .md 
       恭喜你完成這個章節的指引  
-      相信你已經非常嫻熟於如何切換${{t/work-tree}}的不同版本了  
+      相信你已經非常嫻熟於如何切換${{t/work-tree}}到不同版本上了  
 
       到這裡你或許會開始好奇，在上一個章節中，我們學習了如何瀏覽過往的${{t/file-tree}}  
-      並且學習了可以從${{t/gui}}的${{t/file-tree}}介面中窺探特定檔案在過往版本的內容  
+      並且學習了可以從${{t/gui}}的${{t/file-tree-gui}}介面中窺探特定檔案在過往版本的內容  
       既然如此，我們有需要把資料夾切換回特定的版本嗎？  
 
       實際上是有的。主要有兩種目的  
@@ -179,5 +187,6 @@ asset_index:
       這個章節中，我們透過播放 sound 檔案體現了第 1. 點的用途  
       而第 2. 點提到的「修改」在目前為止卻完全沒有提及  
       因為我們只學習了如何取用既存的資料夾版本  
+
       在下一個大章中，我們將學習如何創造新的資料夾版本，開創屬於我們的歷史  
       敬請期待！
