--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -1,11 +1,11 @@
 asset_index:
   infile:
     main.course-name: "fork 使用教學"
-    main.section-intro.name: "第一章：fork 介紹"
-    main.intro-install.name: "第一關：安裝"
-    main.intro-open-repository.name: "第二關：使用 fork 開啟資料夾"
-    main.browse-history.name: "第三關：瀏覽版本歷史"
-    main.checkout-revision.name: "第四關：切換工作樹版本"
+    main.section-intro.name: "第一章：fork 安裝與瀏覽版本"
+    main.intro-install.name: "第一節：安裝"
+    main.intro-open-repository.name: "第二節：使用 fork 開啟資料夾"
+    main.browse-history.name: "第三節：瀏覽版本歷史"
+    main.checkout-revision.name: "第四節：切換工作樹版本"
     
   ondisk:
     intro-install: "intro-install.yaml"
