Save progress during SaveProgressStep; Correct a few references to store.state.pageStage

--- a/example/resources/render-index.yaml
+++ b/example/resources/render-index.yaml
@@ -8,6 +8,7 @@ asset_index:
     verifyInputFailed: "答案不正確"
     verifyRepoDescription: "檢查 git 倉庫是否正確..."
     loadReference: "載入 git 倉庫"
+    saveProgress: "保存關卡進度"
     checkpointSaving: "保存檢查點中..."
     checkpointLoading: "還原檢查點中..."
     checkpointReadyToLoad: "檢查點準備就緒 (ง •̀_•́)ง"
