--- a/json-schemas/config-commons.json
+++ b/json-schemas/config-commons.json
@@ -31,6 +31,11 @@
         "type": "string",
         "description": "git commitish descriptor"
     },
+    "appendCheckpoint": {
+        "type": "boolean",
+        "description": "should append a checkpoint after this step or not",
+        "default": true
+    },
     "checkpointName": {
         "type": "string",
         "description": "name of a checkpoint"
