--- a/example/course-resources/demo/levels/_test.yaml
+++ b/example/course-resources/demo/levels/_test.yaml
@@ -6,7 +6,7 @@
         referenceStoreName: "test-local-ref"
         checkpointStoreName: "test-local-checkpoints"
   steps:
-    - !loadReference
+    - !loadOneReference
       repoSetupName: local
       referenceName: clean
     - !openWorkingPath
