--- a/example/course-resources/fork/levels/intro-open-repository.yaml
+++ b/example/course-resources/fork/levels/intro-open-repository.yaml
@@ -102,7 +102,7 @@
           repoSetupName: basic
           referenceName: init
 
-    - !loadReference
+    - !loadOneReference
       repoSetupName: basic
       referenceName: init
 
