Verify and bake LoadAllReferenceStep; Use loadReference in checkout-revision

--- a/example/course-resources/fork/levels/checkout-revision.yaml
+++ b/example/course-resources/fork/levels/checkout-revision.yaml
@@ -5,8 +5,7 @@
       referenceStoreName: basic-operation
       checkpointStoreName: basic-operation-checkpoints
   steps:
-    - !loadOneReference 
-      repoSetupName: basic
+    - !loadReference 
       referenceName: init
 
   # intro & instruct open target folder
