loadLastLevelFinalSnapshot can omit repoSetupNames and appendCheckpoint for convenience

--- a/example/course-resources/fork/levels/commit-one-file.yaml
+++ b/example/course-resources/fork/levels/commit-one-file.yaml
@@ -5,9 +5,7 @@
       referenceStoreName: basic-operation
       checkpointStoreName: basic-operation-checkpoints
   steps:
-    - !loadOneReference 
-      repoSetupName: basic
-      referenceName: init
+    - !loadLastLevelFinalSnapshot {}
     - !checkpoint 
       checkpointName: "beginning"
 
