--- a/example/course-resources/fork/levels/intro-open-repository.yaml
+++ b/example/course-resources/fork/levels/intro-open-repository.yaml
@@ -109,21 +109,19 @@
 
     - !elaborate
       descriptionId: "level-data/intro-open-repository/introduce-goal"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/intro-open-repository/open"
-      needConfirm: true
     - !elaborate 
       descriptionId: "level-data/intro-open-repository/folded"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/intro-open-repository/open-directory-in-fork"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/intro-open-repository/instruct-verify-open"
+      needConfirm: false
     - !verifyInput 
       answer: "6"
 
     - !elaborate
       descriptionId: "level-data/intro-open-repository/summary"
+      needConfirm: false
     
