--- a/example/course-resources/fork/levels/browse-history.yaml
+++ b/example/course-resources/fork/levels/browse-history.yaml
@@ -7,13 +7,10 @@
   steps:
     - !illustrate  
       descriptionId: "level-data/browse-history/introduction"
-      needConfirm: true
     - !elaborate 
       descriptionId: "level-data/browse-history/graph-as-folder-history"
-      needConfirm: true
     - !illustrate 
       descriptionId: "level-data/browse-history/file-tree-viewer"
-      needConfirm: true
 
     - !loadOneReference 
       repoSetupName: basic
@@ -22,29 +19,28 @@
 # intruct how to use file viewer
     - !instruct 
       descriptionId: "level-data/browse-history/open-folder"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/browse-history/use-file-tree-viewer"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/browse-history/read-file-tree-viewer"
+      needConfirm: false
     - !verifyInput 
       answer: "2"
 
 # introduce file tree and practice
     - !illustrate 
       descriptionId: "level-data/browse-history/explain-file-tree"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/browse-history/read-file-tree-of-second-commit"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/browse-history/read-readme-of-second-commit"
+      needConfirm: false
     - !verifyInput 
       answer: "${{level-data/intro-open-repository/file-read-me:v1}}"
 
     - !instruct 
       descriptionId: "level-data/browse-history/read-readme-of-last-commit"
+      needConfirm: false
     - !verifyInput 
       answer: "3"
 
@@ -56,24 +52,20 @@
 # read file tree will not change working directory
     - !elaborate 
       descriptionId: "level-data/browse-history/read-file-tree-not-affect-working-directory"
-      needConfirm: true
     - !instruct 
       descriptionId: "level-data/browse-history/check-working-directory"
+      needConfirm: false
     - !verifyInput 
       answer: "2"
     - !elaborate  
       descriptionId: "level-data/browse-history/introduce-work-tree"
-      needConfirm: true     
     - !illustrate 
       descriptionId: "level-data/browse-history/illustrate-file-tree"
-      needConfirm: true
     - !illustrate 
       descriptionId: "level-data/browse-history/illustrate-browse-history"
-      needConfirm: true
 
     - !elaborate 
       descriptionId: "level-data/browse-history/summary"
-      needConfirm: true
       
 
     
