--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -29,3 +29,4 @@ asset_index:
     
 # commit-one-file
     brief-how-to-commit: commit-one-file@brief-how-to-commit.gif
+    add-new-file: commit-one-file@add-new-file.png
