--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -3,3 +3,4 @@ asset_index:
     open-in: "Open in (以...開啟)"
     open-in-explorer: "Open In File Explorer (以檔案管理員開啟)"
     checkout-revision: "Checkout Commit...(切換到提交...)"
+    changes-tab: "Changes(變更頁面)"
