--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -30,3 +30,5 @@ asset_index:
 # commit-one-file
     brief-how-to-commit: commit-one-file@brief-how-to-commit.gif
     add-new-file: commit-one-file@add-new-file.png
+    open-changes-tab: commit-one-file@open-changes-tab.png
+    changes-tab: commit-one-file@changes-tab.png
