--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -4,3 +4,4 @@ asset_index:
     open-in-explorer: "Open In File Explorer (以檔案管理員開啟)"
     checkout-revision: "Checkout Commit...(切換到提交...)"
     changes-tab: "Changes(變更頁面)"
+    all-commits-tab: "All Commits(所有變更提交)"
