--- a/example/course-resources/fork/levels/commit-one-file.yaml
+++ b/example/course-resources/fork/levels/commit-one-file.yaml
@@ -5,7 +5,9 @@
       referenceStoreName: basic-operation
       checkpointStoreName: basic-operation-checkpoints
   steps:
-    - !loadLastLevelFinalSnapshot {}
+    - !loadReference 
+      referenceName: init
+
   # intro & instruct add new file
     - !elaborate 
       descriptionId: "level-data/commit-one-file/intro-goal"
@@ -28,5 +30,28 @@
       descriptionId: "level-data/commit-one-file/instruct-open-fork"
     - !instruct 
       descriptionId: "level-data/commit-one-file/instruct-open-commit"
+
+    - !instruct
+      descriptionId: "level-data/commit-one-file/stage-new-file"
+      needConfirm: false
+    - !dev.needAction 
+      actions:
+        - !act.stageAll 
+          repoSetupName: basic
+    - !verifyRepo 
+      referenceName: stage-new
+    
+    - !instruct 
+      descriptionId: "level-data/commit-one-file/fill-message-and-commit"
+      needConfirm: false
+    - !dev.needAction 
+      actions:
+        - !dev.act.git 
+          repoSetupName: basic
+          arguments: [ "commit", "-m", "$level-data/commit-one-file/commit-message" ]
+    - !verifyRepo 
+      referenceName: commit
+
     - !elaborate 
-      descriptionId: "level-data/commit-one-file/intro-commit-page"
+      descriptionId: "level-data/commit-one-file/view-graph"
+
